--- a/app/globals.css
+++ b/app/globals.css
@@ -275,3 +275,18 @@ div:has(> div:contains("Available at")) {
 .duration-300 {
   animation-duration: 300ms;
 }
+
+/* Global Image Protection */
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+  -webkit-touch-callout: none; /* iOS Safari */
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  pointer-events: none !important;
+}
